# GuitarHelio

./: .gitignore  AGENTS.md  GDD.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_QA_CHECKLIST.md  MANUAL_QA_RUNTIME_SUITE.md  README.md  REPO_STRUCTURE.md  UI_ASSET_PROMPTS.md  capacitor.config.ts  improvement_guide.md  index.html  package-lock.json  package.json  review_code_review.md  review_implementation_plan.md  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: android-release.yml
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  neuralnote_converter_jni.cpp
docs/plans/: PLAN.md
electron/: main.mjs
public/songs/: manifest.json
public/ui/: hand-reminder.png~  icon-play-neon.png~
samples/: example.mid
scripts/: audio-cover-extractor.mjs  audio-to-midi-neuralnote.mjs  audio-to-midi.mjs  benchmark-startup.mjs  cli-midi-player.mjs  generate-sample-midi.mjs  midi-utils.mjs
src/app/: config.ts  main.ts  (+2 more)
test/: gameplayController.debugHit.test.ts  gameplayController.easy.test.ts  midiScrubPlayer.test.ts  midiTempoMap.test.ts  nativeConverterMode.test.ts  pitchCalibration.test.ts  pitchDetector.test.ts  playbackNotes.test.ts  playbackResumeState.test.ts  scoring.test.ts  serverConverterMode.test.ts  sessionPersistence.test.ts  songSelectUtils.test.ts  stateMachine.test.ts  tabTargetGenerator.test.ts  targetGenerator.test.ts  tempoMap.test.ts  tunerPitchStabilizer.test.ts  uiOverlays.test.ts
tools/gh_dsp_core/: Cargo.toml  README.md
tools/gh_dsp_core/scripts/: sync-wasm-pkg.mjs
tools/gh_dsp_core/src/: lib.rs
(+117 files in other folders)
